<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="App_Action_Delete_Message">确定删除这些文件吗？</string>
    <string name="App_Action_Share_Size_Message">未选中文件或超过9张</string>
    <string name="App_Action_Share_Type_Message">视频文件分享只能单选此文件</string>
    <string name="App_Agree_And_Continue">同意并继续</string>
    <string name="App_Album">照片</string>
    <string name="App_Button_Cancel">取消</string>
    <string name="App_Button_OK">确定</string>
    <string name="App_Button_Return">返回</string>
    <string name="App_CenterProgress_Loading">正在加载……</string>
    <string name="App_Connect_Wifi_Dialog">连接产品WiFi</string>
    <string name="App_Device_Battert">设备电量</string>
    <string name="App_Device_Info">设备信息</string>
    <string name="App_Device_Time">分钟</string>
    <string name="App_Exit_Title">退出</string>
    <string name="App_Exit_Title_Content">确定要退出吗?</string>
    <string name="App_Go_Setting">前往</string>
    <string name="App_Goto_WifiSetting">请先连接 Wi-Fi</string>
    <string name="App_Goto_WifiSetting_Now">立即连接</string>
    <string name="App_GuideView_Click">Got it!</string>
    <string name="App_Gyroscope_Off">水平镜头</string>
    <string name="App_Gyroscope_On">静态镜头</string>
    <string name="App_Lable_Album">相册</string>
    <string name="App_Lable_Ear_Left">左耳</string>
    <string name="App_Lable_Ear_Right">右耳</string>
    <string name="App_Permission_Title">需要手动允许应用使用读写权限 来使用此功能</string>
    <string name="App_Permission_Title2">需要手动允许应用使用录音权限 来使用此功能</string>
    <string name="App_Problem_Accessories">配件</string>
    <string name="App_Problem_Answer1">A: ① 少微信扫描说明书中二维码点击右上角选择进入浏览器下载蜂鸟采耳 App 注：如觉步骤繁琐也可直接在手机自带应用商店搜索蜂鸟采耳下载产品 App ②按照说明书上的方法正确安装耳勺并确认装紧； ③ 拔盖或长按电源按钮 1 秒种开机 ④ 打开蜂鸟采耳 App （选择正确对应的机器型号）； ⑤ 跳转至手机设置选择无线局域网界面连接产品 WIFi: UseeEar-xxxx； ⑥返回蜂鸟采尸‘再次点击开始即可使用。</string>
    <string name="App_Problem_Answer2">A: 此时需再次点击该设备WiFi，在弹窗中选择 \"不保存\"，断开连接后，再连接该 WIFi，稍后会有弹窗：\"使用此网络无法访问互联网。要继续保持连接吗？\"，选择 \"是\"，即可连接WiFi。</string>
    <string name="App_Problem_Answer3">A: 螺纹耳勺对准镜头旋转安装，掐住耳勺受力点旋转取出。</string>
    <string name="App_Problem_Answer4">A:产品镜头设有LED冷光灯,不晃眼不炫光,产品采用双重温控系统,使用过程中,耳镜部分无感温度25°,机身部分掌心温度32°, 故产品运作过程中发生轻微发热属正常现象,品质安全,可放心使用。</string>
    <string name="App_Problem_Answer5">A:【无法搜索到UseeEar-xxxx产品WIFi】 确认机器是否已开机(开机未连接状态是产品指示灯闪烁,已连接常亮); 【连接产品WIF时提示网络拒绝加入】 确认周围是否有其他手机连接了产品WiF或确认下手机是否又打开App/异常WIF权限; 【连接产品WiF后App仍显示未连接】 确认蜂乌采目耳App是否下载正确或蜂鸟采耳App中是否有选择正确的机器型号。</string>
    <string name="App_Problem_Answer6">A:卸载App重新安装,确认机器型号是都有对应正确的App/正确对应的App型号;酒精棉签擦拭清洁产品镜头。</string>
    <string name="App_Problem_Other">其它</string>
    <string name="App_Problem_Pickear">采耳棒</string>
    <string name="App_Problem_Question1">Q：产品使用流程</string>
    <string name="App_Problem_Question2">Q: “设置”中采耳设备 WIFi 明明显示已连接，进入采耳页面却无法查看视频</string>
    <string name="App_Problem_Question3">Q: 采耳工具如何正确安装/绒毛棒的使用方法</string>
    <string name="App_Problem_Question4">Q: 使用过程机身发热</string>
    <string name="App_Problem_Question5">Q: WiFi连接异常</string>
    <string name="App_Problem_Question6">Q: App显示异常(镜头模糊/花屏/黑屏)</string>
    <string name="App_Representations_And_Terms">声明与条款</string>
    <string name="App_Setting">设置</string>
    <string name="App_Setting_Album">产品相册</string>
    <string name="App_Setting_Problem">常见问题</string>
    <string name="App_Take_Photo">拍摄</string>
    <string name="App_Take_Video">视频</string>
    <string name="App_Terms_Of_Service">用户协议</string>
    <string name="App_User_App_Version">版本</string>
    <string name="App_User_Cache">清除缓存</string>
    <string name="App_User_Language">语言</string>
    <string name="App_User_Play">使用教程</string>
    <string name="App_User_Privacy">隐私协议</string>
    <string name="App_User_Service">服务协议</string>
    <string name="App_User_Websit">官方网站</string>
    <string name="App_Using_Tips">请阅读我们的隐私政策。点击“同意并继续”接受用户协议</string>
    <string name="App_Using_content">欢迎使用UseeEar。我们将严格遵守相关法律法规和隐私政策以保护您的个人信息。 为提供基本服务，需要调用你的如下权限或功能： 必要权限（用于该应用的基本服务和功能） ·存储: 用于数据数据合成图片或视频保存,及历史数据展示 ·获取位置信息: 用于设备快连及Wi-Fi列表等功能 如果你不同意调用以上必要权限或功能，可能导致本应用无法正常使用，你可以选择退出本应用/前往“设置-权限管理关闭授权已终止服务</string>
    <string name="Device_Battery_Close">关闭</string>
    <string name="Device_Battery_Lower">电池电量不足</string>
    <string name="Device_Battery_TurnOff">马上关机</string>
    <string name="Device_Battery_Warning">仅剩15%电量</string>
    <string name="Device_Battery_Warning2">仅剩5%电量</string>
    <string name="Device_Info_Remain_Electricity">剩余电量</string>
    <string name="Device_Info_Remain_Time">剩余时间</string>
    <string name="Device_Status_Connected">已连接</string>
    <string name="Device_Status_Connecting">连接中</string>
    <string name="Device_Status_GoConnect">去连接</string>
    <string name="Device_Status_UnConnect">未连接</string>
    <string name="Device_Status_UnConnected_Click">点击连接设备</string>
    <string name="Dialog_Preemptive_Port">当前设备被其他手机占用，是否继续连接？</string>
    <string name="File_Bottombar_Label_Delete">删除</string>
    <string name="File_Bottombar_Label_Share">分享</string>
    <string name="File_Label_FileList_Empty">内容为空</string>
    <string name="File_Manager_Edit_Select_All">全选</string>
    <string name="File_Manager_Edit_Unselect_All">不全选</string>
    <string name="File_Manager_No_Select_File">未选中文件</string>
    <string name="File_Show_Manager_Title_Select">已选择 %1$s 项</string>
    <string name="Guide_Connect_Notice">点击去连接，跳转手机WIFI设置页面找到“UseeEar-xxxx”的WIFI。点击连接。</string>
    <string name="Guide_Know">知道了</string>
    <string name="Guide_Online_Camera_Notice">点击房屋按钮，即可进入可视界面</string>
    <string name="Guide_Skip">跳过引导</string>
    <string name="Guide_User_Play_Notice">首次使用前， 建议先观看操作视频！</string>
    <string name="License_Device_Illegal">不可用，请连接设备！</string>
    <string name="PDF_Guide_Next">下一步</string>
    <string name="PDF_Guide_Pre">上一步</string>
    <string name="Settings_Label_About_Firmware">固件</string>
    <string name="Settings_Label_About_ProductName">产品名称</string>
    <string name="VideoPlayer_MSG_16x9">16:9</string>
    <string name="VideoPlayer_MSG_4x3">4:3</string>
    <string name="VideoPlayer_MSG_Bestfit">最佳适应</string>
    <string name="VideoPlayer_MSG_Default_Current_Time">0.0</string>
    <string name="VideoPlayer_MSG_Fast_Forward">快进</string>
    <string name="VideoPlayer_MSG_Fast_Rewind">快退</string>
    <string name="VideoPlayer_MSG_Fill">填充</string>
    <string name="VideoPlayer_MSG_Fit_Horizontal">水平适应</string>
    <string name="VideoPlayer_MSG_Fit_Vertical">垂直适应</string>
    <string name="VideoPlayer_MSG_Not_Exist">抱歉！此视频不存在</string>
    <string name="VideoPlayer_MSG_Open_VideoFile_Failed">打开文件失败</string>
    <string name="VideoPlayer_MSG_Original">居中</string>
    <string name="VideoPlayer_MSG_Play_Err">该视频无法播放</string>
    <string name="VideoPlayer_MSG_Replaying_For_History">是否从上次停止的位置恢复播放？</string>
    <string name="VideoPlayer_MSG_Replaying_Title">重播视频</string>
    <string name="VideoPlayer_Subtitleencode_Choose_Text">字幕编码</string>
    <string name="VideoPlayer_Subtitleencode_Saved_Text">设置编码需重新播放才能生效，是否继续？</string>
    <string name="VideoView_Label_Audio">音轨</string>
    <string name="VideoView_Label_Brightness">亮度</string>
    <string name="VideoView_Label_Subtitle">字幕</string>
    <string name="VideoView_Label_Volume">音量</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">UseeEar</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
