<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/apptakeaction"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/app_top_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/problem_pickearsstick_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/problem_pickearsstick_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:textSize="10dp"
                android:textColor="@color/appwhite"
                android:gravity="center"
                android:id="@+id/problem_pickearsstick_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="采耳棒"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/problem_accessories_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/problem_accessories_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:textSize="10dp"
                android:textColor="@color/appwhite"
                android:gravity="center"
                android:id="@+id/problem_accessories_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="配件"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/problem_other_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/problem_other_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:textSize="10dp"
                android:textColor="@color/appwhite"
                android:gravity="center"
                android:id="@+id/problem_other_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="其它"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/problem_pickearsstick_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="14dp"
                android:textColor="@color/appwhite"
                android:id="@+id/problem_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q：产品使用流程 "/>
            <TextView
                android:textSize="12dp"
                android:textColor="@color/scale_view2"
                android:id="@+id/problem_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/App_Problem_Answer1"/>
            <TextView
                android:textSize="14dp"
                android:textColor="@color/appwhite"
                android:id="@+id/problem_q2"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Q: “设置”中采耳设备 WIFi 明明显示已连接，进入采耳页面却无法查看视频"/>
            <TextView
                android:textSize="12dp"
                android:textColor="@color/scale_view2"
                android:id="@+id/problem_a2"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/App_Problem_Answer2"/>
            <TextView
                android:textSize="14dp"
                android:textColor="@color/appwhite"
                android:id="@+id/problem_q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Q：WiFi连接异常"/>
            <TextView
                android:textSize="12dp"
                android:textColor="@color/scale_view2"
                android:id="@+id/problem_a5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/App_Problem_Answer5"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/problem_accessories_content"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="14dp"
                android:textColor="@color/appwhite"
                android:id="@+id/problem_q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q：采耳工具如何正确安装/绒毛棒的使用方法 "/>
            <TextView
                android:textSize="12dp"
                android:textColor="@color/scale_view2"
                android:id="@+id/problem_a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/App_Problem_Answer3"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/problem_other_content"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="14dp"
                android:textColor="@color/appwhite"
                android:id="@+id/problem_q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q：使用过程机身发热"/>
            <TextView
                android:textSize="12dp"
                android:textColor="@color/scale_view2"
                android:id="@+id/problem_a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/App_Problem_Answer4"/>
            <TextView
                android:textSize="14dp"
                android:textColor="@color/appwhite"
                android:id="@+id/problem_q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Q：App显示异常(镜头模糊/花屏/黑屏)"/>
            <TextView
                android:textSize="12dp"
                android:textColor="@color/scale_view2"
                android:id="@+id/problem_a6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/App_Problem_Answer6"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
