<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/apptakeaction"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/app_about_topbar"
        layout="@layout/app_top_bar"/>
    <RelativeLayout
        android:id="@+id/app_about_icon_rl"
        android:layout_width="match_parent"
        android:layout_height="117dp">
        <ImageView
            android:id="@+id/app_about_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_launcher"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/apptextblack"
            android:id="@+id/app_about_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Settings_Label_About_ProductName"
            android:layout_centerVertical="true"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/apptextblack"
            android:id="@+id/app_about_product_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2.000.158"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/apptextblack"
            android:id="@+id/app_about_firmware_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Settings_Label_About_Firmware"
            android:layout_centerVertical="true"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/apptextblack"
            android:id="@+id/app_about_firmware_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2.000.158"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/appblack"
            android:id="@+id/app_about_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/App_User_App_Version"
            android:layout_centerVertical="true"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/appblack"
            android:id="@+id/app_about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2.000.158"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/app_about_logcat"
        android:background="@drawable/shape_takeaction_corner5"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/appwhite"
            android:id="@+id/app_about_logcat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="日志"
            android:layout_centerVertical="true"/>
        <Switch
            android:id="@+id/app_about_logcat_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</LinearLayout>
